fixing spacing on several items

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -77,6 +77,8 @@ h1, h2, h3, h4, h5 {
 	/*border: 1px solid red;*/
 }
 
+p {font-size: .8rem;}
+
 
 html, body {
 	height: 100%;
@@ -93,15 +95,17 @@ body {
 nav {
 	padding-top: 20px;
 	padding-bottom: 20px;
+	margin: 0 auto;
 	width: 100%;
 	display: block;
-	position: fixed;
-	top: 0;
+	position: relative;
+	/* position: fixed; */
+	/* top: 0;
 	left: 0;
 	right: 0;
 	z-index: 10;
 	background-color: white;
-	box-shadow: 0px 2px 2px;
+	box-shadow: 0px 2px 2px; */
 }
 
 nav div {
@@ -119,7 +123,7 @@ nav div a {
 
 nav img {
 	position: absolute;
-	right: 0%;
+	right: 0;
 }
 
 header {
@@ -136,12 +140,13 @@ header div {
 	text-align: center;
 	height: 100%;
 	margin-top: 0;
+	margin-left: 20px;
 }
 
 h1 {
-	font-size: 52px;
+	font-size: 58px;
 	margin-top: 40px;
-	margin-left: 40px;
+	text-align: center;
 }
 
 header div a {
@@ -151,8 +156,8 @@ header div a {
 	border: 1px solid var(--text-color);
 	border-top: 1px solid black;
 	border-bottom: 2px solid var(--text-color);
-	color: var(--text-color)
-
+	color: var(--text-color);
+	text-align: center;
 }
 
 header img {
@@ -175,7 +180,7 @@ hr {
 
 .section1 {
   width: 100%;
-  height: 150px;
+  height: 120px;
   margin: 40px auto 0;
 }
 
@@ -208,7 +213,7 @@ hr {
 
 .section2 {
 	width: 100%;
-	height: 150px;
+	height: 100px;
 	margin: 40px auto 0;
 }
 
@@ -235,10 +240,6 @@ hr {
 	padding-right: 0px;
 }
 
-.hr2 {
-	margin-top: 0;
-}
-
 .contact {
 	margin-top: 40px;
 }
@@ -250,4 +251,8 @@ hr {
 footer {
 	text-align: center;
 	margin: 40px 0 80px;
+}
+
+address {
+	font-size: .8rem;
 }
